Se creó con Colab

--- a/Contaexpress.ipynb
+++ b/Contaexpress.ipynb
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 25,
       "id": "9503fa17-513f-4061-b2bf-fde14f37aa58",
       "metadata": {
         "id": "9503fa17-513f-4061-b2bf-fde14f37aa58"
@@ -156,7 +156,7 @@
         "    # La opción 2 es el filtrado de las transacciones por tipo\n",
         "    print(\"\\n2.Filtrar por tipo\")\n",
         "    # La opción 3 es el filtrado de las transacciones por Editor o Usuario\n",
-        "    print(\"\\n3. Filtrar por usuario\")\n",
+        "    print(\"\\n3.Filtrar por usuario\")\n",
         "    # en la variable opción almacenamos la selección del usuario\n",
         "    opcion = int(input(\"\\nDigite una opción: \"))\n",
         "    # retornamos la variable opcion\n",
@@ -334,14 +334,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 26,
       "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9b6593ee-0c55-47e8-80f0-20a97c492b72",
-        "outputId": "edce495c-dda2-4b81-8701-90deeba7af4e"
+        "outputId": "48641d92-efd5-4298-8235-d4b69d9776f2"
       },
       "outputs": [
         {
@@ -365,77 +365,16 @@
             "\n",
             "1.Filtrar por fecha\n",
             "\n",
-            "2. Filtrar por tipo\n",
+            "2.Filtrar por tipo\n",
             "\n",
-            "Digite una opción: 2\n",
-            "Ingrese el tipo de cuenta de quiere consultar \n",
-            "Ingreso - Venta, Ingreso - Aportes, Egreso - Operacional, Egreso - OtrosIngreso - Aportes\n",
-            "Empty DataFrame\n",
-            "Columns: [Fecha, Descripción, Ingreso/Egreso, Valor ($COP), Nombre del editor]\n",
-            "Index: []\n",
-            "\n",
-            "Presione una tecla para continuar...\n",
-            " Hola María, seleccione una opción de nuestro menú:\n",
-            "\n",
-            "1.Ingresar una nueva transacción\n",
-            "\n",
-            "2.Resumir por transacción\n",
-            "\n",
-            "3.Filtrar transacciones\n",
-            "\n",
-            "4.Visualizar las últimas cinco (5) transacciones\n",
-            "\n",
-            "5.Salir\n",
+            "3. Filtrar por usuario\n",
             "\n",
             "Digite una opción: 3\n",
-            "Seleccione una opción de nuestro menú:\n",
-            "\n",
-            "1.Filtrar por fecha\n",
-            "\n",
-            "2. Filtrar por tipo\n",
-            "\n",
-            "Digite una opción: 2\n",
-            "Ingrese el tipo de cuenta de quiere consultar \n",
-            "Ingreso - Venta, Ingreso - Aportes, Egreso - Operacional, Egreso - OtrosEgreso - Operacional\n",
-            "      Fecha                   Descripción        Ingreso/Egreso  Valor ($COP)  \\\n",
-            "0  01/09/25  Compra concentrado peces 1lb  Egreso - Operacional         15000   \n",
-            "6  05/09/25       Pago servicios públicos  Egreso - Operacional         23800   \n",
-            "\n",
-            "  Nombre del editor  \n",
-            "0              Lina  \n",
-            "6              Lina  \n",
-            "\n",
-            "Presione una tecla para continuar...\n",
-            " Hola María, seleccione una opción de nuestro menú:\n",
-            "\n",
-            "1.Ingresar una nueva transacción\n",
-            "\n",
-            "2.Resumir por transacción\n",
-            "\n",
-            "3.Filtrar transacciones\n",
-            "\n",
-            "4.Visualizar las últimas cinco (5) transacciones\n",
-            "\n",
-            "5.Salir\n",
-            "\n",
-            "Digite una opción: 3\n",
-            "Seleccione una opción de nuestro menú:\n",
-            "\n",
-            "1.Filtrar por fecha\n",
-            "\n",
-            "2. Filtrar por tipo\n",
-            "\n",
-            "Digite una opción: 2\n",
-            "Ingrese el tipo de cuenta de quiere consultar \n",
-            "Ingreso - Venta, Ingreso - Aportes, Egreso - Operacional, Egreso - OtrosIngreso - Venta\n",
+            "Ingrese el nombre del usuario que desea consultar: María\n",
             "      Fecha        Descripción   Ingreso/Egreso  Valor ($COP)  \\\n",
-            "1  01/09/25  Venta pescado 1kg  Ingreso - Venta         40000   \n",
-            "5  04/09/25    Venta peces 1lb  Ingreso - Venta         20000   \n",
             "7  09/09/25  Venta pescado 1Kg  Ingreso - Venta         40000   \n",
             "\n",
             "  Nombre del editor  \n",
-            "1              Lina  \n",
-            "5              Lina  \n",
             "7             María  \n",
             "\n",
             "Presione una tecla para continuar...\n",
@@ -451,51 +390,32 @@
             "\n",
             "5.Salir\n",
             "\n",
-            "Digite una opción: 4\n",
-            "      Fecha                            Descripción        Ingreso/Egreso  \\\n",
-            "3  02/09/25       Pago aportes Luz Mary Septiembre      Ingreso - Aporte   \n",
-            "4  02/09/25  Pago aportes Sergio Hernán Septiembre      Ingreso - Aporte   \n",
-            "5  04/09/25                        Venta peces 1lb       Ingreso - Venta   \n",
-            "6  05/09/25                Pago servicios públicos  Egreso - Operacional   \n",
-            "7  09/09/25                      Venta pescado 1Kg       Ingreso - Venta   \n",
-            "\n",
-            "   Valor ($COP) Nombre del editor  \n",
-            "3         50000              Lina  \n",
-            "4         50000              Lina  \n",
-            "5         20000              Lina  \n",
-            "6         23800              Lina  \n",
-            "7         40000             María  \n",
-            "\n",
-            "Presione una tecla para continuar...\n",
-            " Hola María, seleccione una opción de nuestro menú:\n",
-            "\n",
-            "1.Ingresar una nueva transacción\n",
-            "\n",
-            "2.Resumir por transacción\n",
-            "\n",
-            "3.Filtrar transacciones\n",
-            "\n",
-            "4.Visualizar las últimas cinco (5) transacciones\n",
-            "\n",
-            "5.Salir\n",
-            "\n",
             "Digite una opción: 3\n",
             "Seleccione una opción de nuestro menú:\n",
             "\n",
             "1.Filtrar por fecha\n",
             "\n",
-            "2. Filtrar por tipo\n",
+            "2.Filtrar por tipo\n",
             "\n",
-            "Digite una opción: 2\n",
-            "Ingrese el tipo de cuenta de quiere consultar \n",
-            "Ingreso - Venta, Ingreso - Aportes, Egreso - Operacional, Egreso - OtrosIngreso - Aporte\n",
-            "      Fecha                            Descripción    Ingreso/Egreso  \\\n",
-            "3  02/09/25       Pago aportes Luz Mary Septiembre  Ingreso - Aporte   \n",
-            "4  02/09/25  Pago aportes Sergio Hernán Septiembre  Ingreso - Aporte   \n",
+            "3. Filtrar por usuario\n",
+            "\n",
+            "Digite una opción: 3\n",
+            "Ingrese el nombre del usuario que desea consultar: Lina\n",
+            "      Fecha                            Descripción        Ingreso/Egreso  \\\n",
+            "0  01/09/25           Compra concentrado peces 1lb  Egreso - Operacional   \n",
+            "1  01/09/25                      Venta pescado 1kg       Ingreso - Venta   \n",
+            "3  02/09/25       Pago aportes Luz Mary Septiembre      Ingreso - Aporte   \n",
+            "4  02/09/25  Pago aportes Sergio Hernán Septiembre      Ingreso - Aporte   \n",
+            "5  04/09/25                        Venta peces 1lb       Ingreso - Venta   \n",
+            "6  05/09/25                Pago servicios públicos  Egreso - Operacional   \n",
             "\n",
             "   Valor ($COP) Nombre del editor  \n",
+            "0         15000              Lina  \n",
+            "1         40000              Lina  \n",
             "3         50000              Lina  \n",
             "4         50000              Lina  \n",
+            "5         20000              Lina  \n",
+            "6         23800              Lina  \n",
             "\n",
             "Presione una tecla para continuar...\n",
             " Hola María, seleccione una opción de nuestro menú:\n",
